# wilds

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  wilds.db
.github/workflows/: release.yml
docs/: release.md
migrations/: 0001_user_settings.sql  0002_characters.sql  0003_character_skills.sql  0004_inventory.sql  0005_equipment.sql  0006_system_heavy_reset.sql  0007_world_time.sql  0008_achievements.sql  0009_vendor_stock.sql
scripts/release/: package_unix.sh  package_windows.ps1
src/: achievements.rs  app.rs  audio.rs  character.rs  combat.rs  db.rs  event.rs  inventory.rs  main.rs  settings.rs  town_dialogue.rs  ui.rs  world.rs
src/achievements/: tests.rs
src/app/: combat.rs  input.rs  navigation.rs  progression.rs  training.rs  world.rs
src/app/training/: tests.rs
src/app/world/: dialogue.rs  quests.rs  tests.rs  town.rs
src/character/: catalog.rs  proficiencies.rs  progression.rs
src/character/proficiencies/: tests.rs
src/combat/: content.rs  enemy.rs  player.rs  systems.rs  tests.rs
src/inventory/: catalog.rs  state.rs
src/ui/: character_sheet.rs  combat_view.rs  creation.rs  menu.rs  panels.rs  shared.rs  training.rs
src/world/: quests.rs  tests.rs
